--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\2476382\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\Alex\\AppData\\Roaming\\NetBeans\\27\\build.properties
